--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -95,7 +95,8 @@ section.bandGallery figure img {
     position: absolute;
     display: block;
 }
-
+figure {padding: 0; margin: 0;}
+figure img {width: 150px; }
 figure.round img {
     float: right;
     shape-outside: circle(50% at 50%);
