--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,7 @@ footer {
     transition: all 0.5s ease;
   }
   nav ul li a:hover {
-    background-color: #eee;
+    background-color: pink;
     color: #333 !important;
   }
   nav ul li.active a {
