--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -33,7 +33,7 @@ nav {
         }
 
         ul li a:hover {
-                background-color: #eee;
+                background-color: pink;
                 color: #333!important;
         }
 
