--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -38,7 +38,8 @@ nav {
         }
 
         ul li.active a {
-                color: white;
+                color: black;
+                background-color: pink;
         }
 
         ul li {border: none;}
